--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   cupertino_icons: ^1.0.8
   
   card_swiper: ^3.0.1
+  http: ^1.6.0
+  provider: ^6.1.5+1
 
 dev_dependencies:
   flutter_test:
